feat: finish trust mark implementation
