# modules/admin-server/src/main/kotlin/com/sphereon/oid/fed/server/admin/controllers/TrustMarkTypeController.kt
@@ -2,14 +2,12 @@ package com.sphereon.oid.fed.server.admin.controllers
 
 import com.sphereon.oid.fed.openapi.models.CreateTrustMarkTypeDTO
 import com.sphereon.oid.fed.openapi.models.TrustMarkTypeDTO
-import com.sphereon.oid.fed.openapi.models.UpdateTrustMarkTypeDTO
 import com.sphereon.oid.fed.services.AccountService
 import com.sphereon.oid.fed.services.TrustMarkService
 import org.springframework.web.bind.annotation.DeleteMapping
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.PostMapping
-import org.springframework.web.bind.annotation.PutMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
@@ -43,15 +41,6 @@ class TrustMarkTypeController {
         @PathVariable id: Int
     ): TrustMarkTypeDTO {
         return trustMarkService.findById(accountService.usernameToAccountId(username), id)
-    }
-
-    @PutMapping("/{id}")
-    fun updateTrustMarkType(
-        @PathVariable username: String,
-        @PathVariable id: Int,
-        @RequestBody updateDto: UpdateTrustMarkTypeDTO
-    ): TrustMarkTypeDTO {
-        return trustMarkService.updateTrustMarkType(accountService.usernameToAccountId(username), id, updateDto)
     }
 
     @DeleteMapping("/{id}")
